fixed button small font size for non-latin

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -179,7 +179,7 @@
 @lime-non-latin-body-small-font-size:   48px;
 @lime-tallglyph-body-small-font-size:   48px;
 @lime-non-latin-button-large-font-size: var(--primitive-font-size-54);
-@lime-non-latin-button-small-font-size: var(--primitive-font-size-54);
+@lime-non-latin-button-small-font-size: var(--primitive-font-size-48);
 @lime-non-latin-header-compact-title-font-size: @lime-header-compact-title-font-size;
 @lime-non-latin-header-mini-title-font-size: @lime-header-mini-title-font-size;
 @lime-non-latin-header-wizard-title-font-size: @lime-header-wizard-title-font-size;
